--- a/Python/LaserDistribution.ipynb
+++ b/Python/LaserDistribution.ipynb
@@ -121,7 +121,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.0 64-bit",
+   "display_name": "Python 3.10.5 64-bit (windows store)",
    "language": "python",
    "name": "python3"
   },
@@ -135,12 +135,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.10.5"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "5addf786bcd861d1ce5006f23111f8cbb206731e5b61b0a5632ba9e0252558a8"
+    "hash": "8687b81b5d14307c58608bd19c9f92d9c321847991efa868faf2d3a3bcd23c46"
    }
   }
  },
