--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -63,7 +63,7 @@
     "dir='D:\\\\doc\\\\data\\\\twopump\\\\2060100\\\\'\n",
     "dir='D:\\\\doc\\\\data\\\\ion1test\\\\twopump\\\\t2\\\\'\n",
     "dir='D:\\\\doc\\\\data\\\\ion1test\\\\testP1\\\\'\n",
-    "dir='D:\\\\dataofpro\\\\'\n",
+    "dir='D:\\\\dataofpro\\\\2062130\\\\'\n",
     "# dir='D:\\\\doc\\\\data\\\\ion1testold\\\\1140fs\\\\0\\\\'\n",
     "# dir='D:\\\\doc\\\\data\\\\ion1testold\\\\wave\\\\21\\\\'\n",
     "print('Working directory',dir)\n",
@@ -605,20 +605,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Plot population of electronic states"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Plot population of vibrational states"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -876,7 +862,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "data=np.loadtxt(dir+'eneTRJVion.dat')\n",
+    "data=np.loadtxt(dir+'eneTRJV.dat')\n",
     "t = data[:,0]\n",
     "outDir=dir\n",
     "population_by_continent = {\n",
@@ -916,7 +902,7 @@
     "z3=data[:,4]\n",
     "ax11 = fig.add_subplot(gs[0,0])\n",
     "ax11.tricontourf(x,y,z1,levels,cmap='jet')\n",
-    "plt.ylim(-5.5,max(y))\n",
+    "# plt.ylim(-5.5,max(y))\n",
     "ax21 = fig.add_subplot(gs[0,1])\n",
     "ax21.tricontourf(x,y,z2,levels,cmap='jet')\n",
     "ax31 = fig.add_subplot(gs[0,2])\n",
@@ -935,7 +921,6 @@
     "ax32 = fig.add_subplot(gs[1,2])\n",
     "ax32.tricontourf(x,y,z3,levels,cmap='jet')\n",
     "# plt.ylim(min(y),5.5)\n",
-    "\n",
     "data=np.loadtxt(intDir+'ktot.dat')\n",
     "x=data[:,0]\n",
     "y=data[:,1]\n",
@@ -948,15 +933,66 @@
     "ax23.tricontourf(x,y,z2,levels,cmap='jet')\n",
     "ax33= fig.add_subplot(gs[2,2])\n",
     "ax33.tricontourf(x,y,z3,levels,cmap='jet')\n",
-    "#plt.ylim(-5.5,5.5)\n",
     "plt.subplots_adjust(left=0.1,\n",
     "                    bottom=0.1, \n",
     "                    right=0.9, \n",
     "                    top=0.9, \n",
     "                    wspace=0.25, \n",
     "                    hspace=0.25)\n",
-    "plt.savefig(outDir+'K.'+figureType,bbox_inches ='tight',dpi=figureDPI)\n",
+    "plt.savefig(outDir+'Ks.'+figureType,bbox_inches ='tight',dpi=figureDPI)\n",
     "\n",
+    "plt.show()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(constrained_layout=True)\n",
+    "plt.figure(figsize=(16/2.54,13/2.54))\n",
+    "data=np.loadtxt(intDir+'ktot.dat')\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z1=data[:,2]\n",
+    "z2=data[:,3]\n",
+    "z3=data[:,4]\n",
+    "z4=z1+z2+z3\n",
+    "\n",
+    "plt.subplot(2,2,1)\n",
+    "plt.tricontourf(x,y,z1,levels,cmap='jet')\n",
+    "plt.colorbar()\n",
+    "plt.title('(a)',loc='left')\n",
+    "plt.xlabel('Time (fs)')\n",
+    "plt.ylabel('$K$ (arb.units)')\n",
+    "plt.subplot(2,2,2)\n",
+    "plt.tricontourf(x,y,z2,levels,cmap='jet')\n",
+    "plt.colorbar()\n",
+    "plt.title('(b)',loc='left')\n",
+    "plt.xlabel('Time (fs)')\n",
+    "plt.ylabel('$K$ (arb.units)')\n",
+    "plt.subplot(2,2,3)\n",
+    "plt.tricontourf(x,y,z3,levels,cmap='jet')\n",
+    "plt.colorbar()\n",
+    "plt.title('(c)',loc='left')\n",
+    "plt.xlabel('Time (fs)')\n",
+    "plt.ylabel('$K$ (arb.units)')\n",
+    "plt.subplot(2,2,4)\n",
+    "plt.tricontourf(x,y,z4,levels,cmap='jet')\n",
+    "plt.colorbar()\n",
+    "plt.title('(d)',loc='left')\n",
+    "plt.xlabel('Time (fs)')\n",
+    "plt.ylabel('$K$ (arb.units)')\n",
+    "#plt.ylim(-5.5,5.5)\n",
+    "plt.subplots_adjust(left=0.1,\n",
+    "                    bottom=0.1, \n",
+    "                    right=0.9, \n",
+    "                    top=0.9, \n",
+    "                    wspace=0.4, \n",
+    "                    hspace=0.3)\n",
+    "plt.savefig(outDir+'Ktot.'+figureType,bbox_inches ='tight',dpi=figureDPI)\n",
     "plt.show()"
    ]
   },
@@ -1605,7 +1641,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.0 64-bit",
+   "display_name": "Python 3.10.5 64-bit (windows store)",
    "language": "python",
    "name": "python3"
   },
@@ -1619,12 +1655,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.10.5"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "5addf786bcd861d1ce5006f23111f8cbb206731e5b61b0a5632ba9e0252558a8"
+    "hash": "8687b81b5d14307c58608bd19c9f92d9c321847991efa868faf2d3a3bcd23c46"
    }
   }
  },
