--- a/Python/IonPaperPlot.ipynb
+++ b/Python/IonPaperPlot.ipynb
@@ -397,20 +397,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure(tight_layout=True,figsize=(cm2inch(8),cm2inch(6.5)))\n",
-    "data=np.loadtxt('D:\\\\doc\\\\data\\\\ion1testold\\\\DifferentDelatTimeOfPumpAndProbe\\\\dteq150fs\\\\exc_rad.dat')\n",
-    "x=data[:,0]*1000\n",
+    "fig = plt.figure(tight_layout=True,figsize=(cm2inch(8*2),cm2inch(6.5*2)))\n",
+    "intDir=\"D:\\\\doc\\\\data\\\\onepump\\\\\"\n",
+    "plt.subplot(2,1,1)\n",
+    "data=np.loadtxt(intDir+\"excradwave.dat\")\n",
+    "x=data[:,0]\n",
     "y=data[:,1]\n",
     "z=data[:,2]\n",
     "plt.xlabel(\"Time (fs)\")\n",
     "plt.ylabel(\"$R$ (a.u.)\")\n",
     "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
     "plt.colorbar()\n",
-    "\n",
-    "plt.xlim(0,150)\n",
+    "plt.title(\"(a)\",loc='left')\n",
+    "# plt.xlim(0,150)\n",
     "plt.ylim(min(y),10)\n",
-    "#plt.yticks([90,180,270])\n",
-    "#plt.title(\"(d) $P_{\\\\rm{Total}}$\",loc='left')\n",
+    "plt.subplot(2,1,2)\n",
+    "data=np.loadtxt(intDir+'ktot.dat')\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z1=data[:,2]\n",
+    "z2=data[:,3]\n",
+    "z3=data[:,4]\n",
+    "z4=z1+z2+z3\n",
+    "\n",
+    "plt.tricontourf(x,y,z2,levels,cmap='jet')\n",
+    "plt.colorbar()\n",
+    "plt.title('(b)',loc='left')\n",
+    "plt.xlabel('Time (fs)')\n",
+    "plt.ylabel('Momentum (arb.units)')\n",
     "plt.savefig(dir+'f7pumpExcRadWave.'+figureType,bbox_inches = 'tight',dpi=figureDPI)"
    ]
   },
@@ -1093,7 +1107,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 64-bit (windows store)",
+   "display_name": "Python 3.9.0 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1107,12 +1121,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.9.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "8687b81b5d14307c58608bd19c9f92d9c321847991efa868faf2d3a3bcd23c46"
+    "hash": "5addf786bcd861d1ce5006f23111f8cbb206731e5b61b0a5632ba9e0252558a8"
    }
   }
  },
