--- a/Python/Ionplot.ipynb
+++ b/Python/Ionplot.ipynb
@@ -102,7 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\twopump\\\\2080\\\\'\n",
+    "dir='D:\\\\doc\\\\data\\\\ion1test\\\\twopump\\\\2040100\\\\'\n",
     "print('Working directory',dir)\n",
     "print(\"\\n\")\n",
     "f=open(dir+\"alog.dat\",encoding=\"utf-8\")\n",
@@ -179,7 +179,7 @@
     "plt.figure(figsize=(16/2.54,6.5/2.54))\n",
     "plt.subplot(1,2,1)\n",
     "plt.xlim(TimeTurn,TimeEnd)\n",
-    "ax=plt.plot(data[:,0],data[:,1],'k-',data[:,0],data[:,2],'r-',data[:,0],1-data[:,1]-data[:,2],'b-')\n",
+    "ax=plt.plot(data[:,0],data[:,1],'k-',data[:,0],data[:,2],'r--',data[:,0],1-data[:,1]-data[:,2],'b-.')\n",
     "plt.legend([\"Gro\",\"Exc\",\"Ion\"],loc=(0.65,0.70))\n",
     "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
     "plt.ylabel(\"Population\")\n",
