--- a/Python/orientation3d.ipynb
+++ b/Python/orientation3d.ipynb
@@ -14,23 +14,202 @@
     "plt.rcParams['ytick.right']  =plt.rcParams['xtick.top'] =True\n",
     "xminorLocator=MultipleLocator(2)\n",
     "#plt.rcParams['set_minor_locator']=xminorLocator\n",
+    "plt.rcParams.update({\n",
+    "    \"text.usetex\": True,\n",
+    "    \"font.family\": \"sans-serif\",\n",
+    "    \"font.sans-serif\": [\"Time New Rroman\"]})\n",
+    "# for Palatino and other serif fonts use:\n",
+    "plt.rcParams.update({\n",
+    "    \"text.usetex\": True,\n",
+    "    \"font.family\": \"serif\",\n",
+    "    #\"font.serif\": [\"Palatino\"],\n",
+    "    \"font.serif\": [\"Time New Roman\"], \n",
+    "})\n",
+    "# It's also possible to use the reduced notation by directly setting font.family:\n",
+    "plt.rcParams.update({\n",
+    "  \"text.usetex\": True,\n",
+    "  \"font.family\": \"Time New Roman\",\n",
+    "  \"font.size\": 8,\n",
+    "})\n",
     "\n",
-    "plt.rcParams['figure.figsize'] = (8,6)\n",
+    "def cm_to_inch(value):\n",
+    "    return value/2.54\n",
+    "\n",
+    "plt.rcParams['figure.figsize'] = (cm_to_inch(8), cm_to_inch(6.5))\n",
+    "#plt.rcParams['figure.figsize'] =(4,3)#(3.5,2.5)\n",
+    "plt.rcParams['lines.linewidth'] = 1\n",
     "plt.rcParams['xtick.direction'] = 'in'\n",
     "plt.rcParams['ytick.direction'] = 'in'\n",
-    "#from mpl_toolkits.mplot3d import Axes3D\n",
-    "#dir=\"D:\\\\doc\\\\data\\\\ion1testold\\\\DifferentDelatTimeOfPumpAndProbe\\\\dteq50fs\\\\\"\n",
-    "#dir=\"D:\\\\doc\\\\data\\\\ion1testold\\\\t500t840\\\\44\\\\\"\n",
-    "#dir='D:\\\\doc\\\\data\\\\ion1testold\\\\NoAlignment\\\\41\\\\'\n",
-    "dir='D:\\\\doc\\\\data\\\\TimeFrequencyDistribution\\\\tset1\\\\'\n",
-    "print('Working directory',dir)\n",
-    "print(\"\\n\")\n",
+    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "import numpy \n",
+    "def setlabel(ax, label, loc=2, borderpad=0.6, **kwargs):\n",
+    "    legend = ax.get_legend()\n",
+    "    if legend:\n",
+    "        ax.add_artist(legend)\n",
+    "    line, = ax.plot(numpy.NaN,numpy.NaN,color='none',label=label)\n",
+    "    label_legend = ax.legend(handles=[line],\n",
+    "                             loc=[-0.15,1.001],\n",
+    "                             handlelength=0,\n",
+    "                             handleheight=0,\n",
+    "                             handletextpad=0,\n",
+    "                             borderaxespad=0,\n",
+    "                             borderpad=borderpad,\n",
+    "                             frameon=False,\n",
+    "                             **kwargs)\n",
+    "    label_legend.remove()\n",
+    "    ax.add_artist(label_legend)\n",
+    "    line.remove()\n",
+    "def setlabelm(ax, label, loc, borderpad=0.6, **kwargs):\n",
+    "    legend = ax.get_legend()\n",
+    "    if legend:\n",
+    "        ax.add_artist(legend)\n",
+    "    line, = ax.plot(numpy.NaN,numpy.NaN,color='none',label=label)\n",
+    "    label_legend = ax.legend(handles=[line],\n",
+    "                             loc=loc,\n",
+    "                             handlelength=0,\n",
+    "                             handleheight=0,\n",
+    "                             handletextpad=0,\n",
+    "                             borderaxespad=0,\n",
+    "                             borderpad=borderpad,\n",
+    "                             frameon=False,\n",
+    "                             **kwargs)\n",
+    "    label_legend.remove()\n",
+    "    ax.add_artist(label_legend)\n",
+    "    line.remove()\n",
     "levels=100\n",
     "figureDPI=1200\n",
     "figureType=\"jpeg\"\n",
-    "timeUnit=\"fs\"\n",
-    "import os\n",
-    "os.startfile(dir)"
+    "timeUnit=\"fs\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dir='D:\\\\dataofpro\\\\'\n",
+    "print('Working directory',dir)\n",
+    "print(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "data1=np.loadtxt(dir+\"orientation.dat\")\n",
+    "data2=np.loadtxt(dir+\"Totalorientation.dat\")\n",
+    "x1=data1[:,0]\n",
+    "y1=data1[:,1]\n",
+    "x2=data2[:,0]\n",
+    "y2=data2[:,1]\n",
+    "fig, ax1 = plt.subplots()\n",
+    "color = 'tab:red'\n",
+    "ax1.set_xlabel('Time ('+timeUnit+')')\n",
+    "ax1.set_ylabel('$\\\\langle{\\\\rm  cos} \\\\theta \\\\rangle$', color=color)\n",
+    "ax1.plot(x1, y1, color=color)\n",
+    "ax1.tick_params(axis='y', labelcolor=color)\n",
+    "plt.xlim(5,15)\n",
+    "ax2 = ax1.twinx()  # instantiate a second axes that shares the same x-axis\n",
+    "\n",
+    "color = 'tab:blue'\n",
+    "ax2.set_ylabel('$\\\\langle{\\\\rm cos^2} \\\\theta \\\\rangle$', color=color)  # we already handled the x-label with ax1\n",
+    "ax2.plot(x2, y2,'--', color=color)\n",
+    "ax2.tick_params(axis='y', labelcolor=color)\n",
+    "\n",
+    "fig.tight_layout()  # otherwise the right y-label is slightly clipped\n",
+    "plt.savefig(dir+\"OrientationAndAlignment.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure()\n",
+    "ax = fig.add_subplot(projection='3d')\n",
+    "data=np.loadtxt(dir+\"BoltzmanInit.dat\")\n",
+    "j=data[:,0]\n",
+    "m=data[:,1]\n",
+    "p=data[:,2]\n",
+    "ax.scatter(j,m,p)\n",
+    "plt.xlabel(\"J\")\n",
+    "plt.ylabel(\"M\")\n",
+    "plt.title(\"Boltzman distributions\")\n",
+    "plt.savefig(dir+\"BoltzmanInitialDistribuiton.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure()\n",
+    "ax = fig.add_subplot(projection='3d')\n",
+    "data=np.loadtxt(dir+\"BoltzmanDist.dat\")\n",
+    "j=data[:,0]\n",
+    "m=data[:,1]\n",
+    "p=data[:,2]\n",
+    "ax.scatter(j,m,p)\n",
+    "plt.xlabel(\"J\")\n",
+    "plt.ylabel(\"M\")\n",
+    "plt.title(\"Boltzman distributions\")\n",
+    "plt.savefig(dir+\"BoltzmanFinalDistribuiton.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "leg=['$\\\\vert$0,0$\\\\rangle$']\n",
+    "for i in range(0,3):\n",
+    "    if (i == 0):\n",
+    "        m=0\n",
+    "        data=np.loadtxt(dir+\"PopuTot/PopuTotJ\"+str(i)+\"m\"+str(m))\n",
+    "        print(i,m)\n",
+    "        x=data[:,2]\n",
+    "        y=data[:,3]\n",
+    "        plt.plot(x,y)\n",
+    "        # leg=(\"$\\\\vert$\"+str(i)+\",\"+str(m)+\"$\\\\rangle$\")\n",
+    "        # plt.legend(leg,ncol=3)\n",
+    "    else : \n",
+    "        for m in range(-i,i+1):\n",
+    "            data=np.loadtxt(dir+\"PopuTot/PopuTotJ\"+str(i)+\"m\"+str(m))\n",
+    "            print(i,m)\n",
+    "            x=data[:,2]\n",
+    "            y=data[:,3]\n",
+    "            plt.plot(x,y)\n",
+    "            leg.append(\"$\\\\vert$\"+str(i)+\",\"+str(m)+\"$\\\\rangle$\")\n",
+    "            # print(\"leg=\",leg)\n",
+    "plt.legend(leg,ncol=3,fontsize=\"5\")\n",
+    "plt.savefig(dir+\"PopuTot.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data=np.loadtxt(dir+\"BoltzmanInit.dat\")\n",
+    "j=data[:,0]\n",
+    "m=data[:,1]\n",
+    "p=data[:,2]\n",
+    "for i in range(0,max(j)):\n",
+    "    mmax=(i+1)**2\n",
+    "    for ii in range(0,mmax):\n",
+    "        "
    ]
   },
   {
@@ -47,10 +226,17 @@
     "x=data[:,0]\n",
     "y=data[:,1]\n",
     "z=data[:,2]\n",
-    "# ax1.scatter3D(x,y,z,cmap=\"Blues\",s=0.2,)\n",
-    "plt.tricontour(x,y,z,levels,cmap=\"jet\")\n",
+    "ax1.scatter3D(x,y,z,cmap=\"Blues\",s=0.2,)\n",
+    "# plt.tricontour(x,y,z,levels,cmap=\"jet\")\n",
     "# plt.plot3d(x,y,z)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
