--- a/Python/FigureForTwoPump.ipynb
+++ b/Python/FigureForTwoPump.ipynb
@@ -205,6 +205,264 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "intDir=\"D:\\\\doc\\\\twopump\\\\2060100\\\\\"\n",
+    "legengLoc=(0.15,0.75)\n",
+    "plt.figure(figsize=((16/2.54),(13/2)))\n",
+    "#plt.figure(figsize=(8,6))\n",
+    "titleLoc=\"left\"\n",
+    "ax1=plt.subplot(2,2,1)\n",
+    "setlabel(ax1,'(a)')\n",
+    "data=np.loadtxt(intDir+\"TimFreDis4.dat\")\n",
+    "# np.savetxt(dir+\"data\\\\f3(1).dat\",data,fmt=\"%.9f\")\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
+    "plt.xlabel(\"Time (fs)\")\n",
+    "plt.ylabel(\"Frequency (a.u.)\")\n",
+    "plt.tricontourf(x,y,z,100,cmap='jet')\n",
+    "#plt.colorbar()\n",
+    "ax2=plt.subplot(2,2,2)\n",
+    "setlabel(ax2,'(b)')\n",
+    "data1=np.loadtxt(intDir+\"FreDis1.dat\")\n",
+    "data2=np.loadtxt(intDir+\"FreDis2.dat\")\n",
+    "data3=np.loadtxt(intDir+\"FreDis3.dat\")\n",
+    "data4=np.loadtxt(intDir+\"FreDis4.dat\")\n",
+    "# np.savetxt(dir+\"data\\\\f3(2).dat\",data4,fmt=\"%.9f\")\n",
+    "x1=data1[:,0]\n",
+    "y1=data1[:,1]\n",
+    "x2=data2[:,0]\n",
+    "y2=data2[:,1]\n",
+    "x3=data3[:,0]\n",
+    "y3=data3[:,1]\n",
+    "x4=data4[:,0]\n",
+    "y4=data4[:,1]\n",
+    "plt.xlabel(\"Intensity (arb.units)\") \n",
+    "plt.ylabel(\"Frequency (a.u.)\")\n",
+    "#plt.xlim(0,5)\n",
+    "plt.ylim(min(np.loadtxt(intDir+\"TimFreDis4.dat\")[:,1]),max(np.loadtxt(intDir+\"TimFreDis4.dat\")[:,1]))\n",
+    "# plt.plot(y4,x4)\n",
+    "plt.plot(x4,y4,'k-')#(y1,x1,\"k-\",y2,x2,\"r--\")#,y3,x3,'b-.')\n",
+    "#plt.legend([\"pump1\",\"pump2\",\"probe\"],loc=(0.55,0.7))\n",
+    "plt.legend([\"pump\",\"probe\"],loc=(0.6,0.1))\n",
+    "#plt.legend([\"P 1\",\"P 2\",\"P 3\"],loc=legengLoc)\n",
+    "ax3=plt.subplot(2,2,3)\n",
+    "data=np.loadtxt(intDir+\"Laser.dat\")\n",
+    "# np.savetxt(dir+\"data\\\\f3(34).dat\",data,fmt=\"%.9f\")\n",
+    "x=data[:,0]\n",
+    "y1=data[:,4]\n",
+    "y2=data[:,5]\n",
+    "y3=data[:,6]\n",
+    "plt.xlim(min(x),max(x))\n",
+    "setlabel(ax3,'(c)')\n",
+    "plt.plot(x,y1,'k-',x,y2,'r--',x,-y1,'k-',x,-y2,'r--',x,y3,'b-.',x,-y3,'b-.')\n",
+    "plt.xlabel(\"Time (fs)\")\n",
+    "plt.ylabel(\"Intensity (a.u.)\")\n",
+    "# plt.legend([\"pump1\",\"pump2\",\"probe\"],loc=legengLoc)\n",
+    "plt.legend([\"pump\",\"probe\"],loc=legengLoc)\n",
+    "#plt.legend([\"P 1\",\"P 2\",\"P 3\"],loc=legengLoc)\n",
+    "ax4=plt.subplot(2,2,4)\n",
+    "setlabel(ax4,'(d)')\n",
+    "data=np.loadtxt(intDir+\"Laser.dat\")\n",
+    "x1=data[:,0]\n",
+    "y1=data[:,1]\n",
+    "y2=data[:,2]\n",
+    "y3=data[:,3]\n",
+    "plt.xlim(min(x),max(x))\n",
+    "plt.xlabel(\"Time (fs)\")\n",
+    "plt.ylabel(\"Intensity (a.u.)\")\n",
+    "\n",
+    "plt.plot(x1,y1,'k-',x1,y2,'r-',x,y3,'b-',)\n",
+    "# plt.legend([\"pump1\",\"pump2\",'probe'],loc=legengLoc)\n",
+    "plt.legend([\"pump\",\"probe\"],loc=legengLoc)\n",
+    "#plt.legend([\"P 1\",\"P 2\",\"P 3\"],loc=legengLoc)\n",
+    "plt.subplots_adjust(left=0.125,\n",
+    "                    bottom=0.1, \n",
+    "                    right=0.9, \n",
+    "                    top=0.9, \n",
+    "                    wspace=0.3, \n",
+    "                    hspace=0.22)\n",
+    "# plt.savefig(dir+\"picture\\\\f3TimeFrequencyDistribution.\"+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t=[]\n",
+    "p=[]\n",
+    "tp=[[]for i in range(2)]\n",
+    "for i in range(10,180,5):\n",
+    "    data=np.loadtxt('D:\\\\doc\\\\data\\\\ion1test\\\\delay\\\\'+str(i)+'\\\\populationofstate.dat')\n",
+    "    x=data[:,0]\n",
+    "    y1=data[:,1]\n",
+    "    y2=data[:,2]\n",
+    "    y3=data[:,3]\n",
+    "    print(i)\n",
+    "    t.append(i)\n",
+    "    tp[0].append(i)\n",
+    "    tp[1].append(max(y3))\n",
+    "    p.append(max(y3))\n",
+    "plt.plot(tp[0],tp[1],'k-',marker='o',markerfacecolor='r',markersize='5')\n",
+    "plt.ylim(-0.17,1.05)\n",
+    "plt.xlabel(\"$t_{\\\\rm{pp}}$ (fs)\")\n",
+    "plt.ylabel(\"Ionization probability\")\n",
+    "plt.savefig('D:\\\\doc\\\\data\\\\ion\\\\picture\\\\f6pop.'+figureType,bbox_inches = 'tight',dpi=figureDPI)\n",
+    "np.savetxt('D:\\\\doc\\\\data\\\\ion\\\\data\\\\f6PopDelay.dat',tp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(tight_layout=True,figsize=(cm2inch(8*2),cm2inch(6.5*4)))\n",
+    "import matplotlib.gridspec as gridspec\n",
+    "subdir=\"D:\\\\doc\\\\data\\\\ion1test\\\\delayPumpAndProbe\\\\\"\n",
+    "gs = gridspec.GridSpec(4, 2)\n",
+    "ax = fig.add_subplot(gs[0,0])\n",
+    "data=np.loadtxt(subdir+'21\\\\populationofstate.dat')\n",
+    "np.savetxt(dir+'f7(1).dat', data)\n",
+    "x=data[:,0]\n",
+    "y1=data[:,1]\n",
+    "y2=data[:,2]\n",
+    "y3=1-y1-y2\n",
+    "print('$P_{ion}$ = ',y3[-1])\n",
+    "plt.plot(x,y1,'k-',x,y2,'r--',x,y3,'b-.')\n",
+    "setlabel2(ax,'(a)')\n",
+    "# plt.xlim(1620,1680)\n",
+    "plt.legend([\"$p_{gro}(t)$\",\"$p_{exc}(t)$\",\"$p_{ion}(t)$\"],loc=(0.65,0.7))\n",
+    "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
+    "plt.ylabel(\"Population\")\n",
+    "ax = fig.add_subplot(gs[1,0])\n",
+    "data=np.loadtxt(subdir+'42\\\\populationofstate.dat')\n",
+    "np.savetxt(dir+'data\\\\f7(2).dat', data)\n",
+    "x=data[:,0]\n",
+    "y1=data[:,1]\n",
+    "y2=data[:,2]\n",
+    "y3=1-y1-y2\n",
+    "print('$P_{ion}$ = ',y3[-1])\n",
+    "plt.plot(x,y1,'k-',x,y2,'r--',x,y3,'b-.')\n",
+    "setlabel2(ax,'(b)')\n",
+    "# plt.xlim(1620,1680)\n",
+    "plt.legend([\"$p_{gro}(t)$\",\"$p_{exc}(t)$\",\"$p_{ion}(t)$\"],loc=(0.65,0.7))\n",
+    "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
+    "plt.ylabel(\"Population\")\n",
+    "ax = fig.add_subplot(gs[2, 0])\n",
+    "data=np.loadtxt(subdir+'63\\\\populationofstate.dat')\n",
+    "np.savetxt(dir+'data\\\\f7(3).dat', data)\n",
+    "x=data[:,0]\n",
+    "y1=data[:,1]\n",
+    "y2=data[:,2]\n",
+    "y3=1-y1-y2\n",
+    "print('$P_{ion}$ = ',y3[-1])\n",
+    "plt.plot(x,y1,'k-',x,y2,'r--',x,y3,'b-.')\n",
+    "setlabel2(ax,'(c)')\n",
+    "#plt.xlim(1620,1680)\n",
+    "plt.legend([\"$p_{gro}(t)$\",\"$p_{exc}(t)$\",\"$p_{ion}(t)$\"],loc=(0.65,0.7))\n",
+    "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
+    "plt.ylabel(\"Population\")\n",
+    "ax = fig.add_subplot(gs[3,0])\n",
+    "data=np.loadtxt(subdir+'84\\\\populationofstate.dat')\n",
+    "np.savetxt(dir+'data\\\\f7(4).dat', data)\n",
+    "x=data[:,0]\n",
+    "y1=data[:,1]\n",
+    "y2=data[:,2]\n",
+    "y3=1-y1-y2\n",
+    "print('$P_{ion}$ = ',y3[-1])\n",
+    "plt.plot(x,y1,'k-',x,y2,'r--',x,y3,'b-.')\n",
+    "setlabel2(ax,'(d)')\n",
+    "#plt.xlim(1620,1680)\n",
+    "plt.legend([\"$p_{gro}(t)$\",\"$p_{exc}(t)$\",\"$p_{ion}(t)$\"],loc=(0.65,0.7))\n",
+    "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
+    "plt.ylabel(\"Population\")\n",
+    "ax= fig.add_subplot(gs[0,1])\n",
+    "data=np.loadtxt(subdir+'21\\\\timeenergyspctra.dat')\n",
+    "np.savetxt(dir+'data\\\\f7(5).dat', data)\n",
+    "l=np.argmax(data[:,2])\n",
+    "x=data[l-10:l+90,1]\n",
+    "print(l)\n",
+    "y=data[l-10:l+90,2]\n",
+    "x1=np.arange(min(x),max(x),(max(x)-min(x))/200)\n",
+    "from scipy import interpolate\n",
+    "y1=interpolate.interp1d(x,y,kind='cubic')(x1)\n",
+    "plt.ylim(-0.009, 0.12)\n",
+    "plt.plot(x1,y1,'k')\n",
+    "setlabel2(ax,'(e)')\n",
+    "#plt.text(0.3*(max(x)-min(x)),0.5*(max(y)-min(y)),'(0+2)-REMPI')\n",
+    "plt.text(0.2*(max(x)-min(x)),0.8*(max(y)-min(y)),'(1+1)-REMPI')\n",
+    "plt.text(0.6*(max(x)-min(x)),0.1*(max(y)-min(y)),'(1+2)-REMPI')\n",
+    "plt.xlabel(\"Energy (eV)\")\n",
+    "plt.ylabel(\"Intensity (arb.units)\")\n",
+    "ax= fig.add_subplot(gs[1,1])\n",
+    "data=np.loadtxt(subdir+'42\\\\timeenergyspctra.dat')\n",
+    "np.savetxt(dir+'data\\\\f7(6).dat', data)\n",
+    "l=np.argmax(data[:,2])\n",
+    "x=data[l-10:l+90,1]\n",
+    "print(l)\n",
+    "y=data[l-10:l+90,2]\n",
+    "x1=np.arange(min(x),max(x),(max(x)-min(x))/200)\n",
+    "from scipy import interpolate\n",
+    "y1=interpolate.interp1d(x,y,kind='cubic')(x1)\n",
+    "plt.ylim(-0.009, 0.12)\n",
+    "plt.plot(x1,y1,'k')\n",
+    "setlabel2(ax,'(f)')\n",
+    "plt.text(0.2*(max(x)-min(x)),0.9*(max(y)-min(y)),'(1+1)-REMPI')\n",
+    "plt.text(0.6*(max(x)-min(x)),0.6*(max(y)-min(y)),'(1+2)-REMPI')\n",
+    "plt.xlabel(\"Energy (eV)\")\n",
+    "plt.ylabel(\"Intensity (arb.units)\")\n",
+    "ax= fig.add_subplot(gs[2,1])\n",
+    "data=np.loadtxt(subdir+'63\\\\timeenergyspctra.dat')\n",
+    "np.savetxt(dir+'data\\\\f7(7).dat', data)\n",
+    "l=np.argmax(data[:,2])\n",
+    "x=data[l-10:l+90,1]\n",
+    "print(l)\n",
+    "y=data[l-10:l+90,2]\n",
+    "x1=np.arange(min(x),max(x),(max(x)-min(x))/200)\n",
+    "from scipy import interpolate\n",
+    "y1=interpolate.interp1d(x,y,kind='cubic')(x1)\n",
+    "plt.ylim(-0.009, 0.12)\n",
+    "plt.plot(x1,y1,'k')\n",
+    "setlabel2(ax,'(g)')\n",
+    "plt.text(0.2*(max(x)-min(x)),0.8*(max(y)-min(y)),'(1+1)-REMPI')\n",
+    "plt.text(0.6*(max(x)-min(x)),0.2*(max(y)-min(y)),'(1+2)-REMPI')\n",
+    "plt.xlabel(\"Energy (eV)\")\n",
+    "plt.ylabel(\"Intensity (arb.units)\")\n",
+    "ax= fig.add_subplot(gs[3,1])\n",
+    "data=np.loadtxt(subdir+'84\\\\timeenergyspctra.dat')\n",
+    "np.savetxt(dir+'data\\\\f7(8).dat', data)\n",
+    "l=np.argmax(data[:,2])\n",
+    "x=data[l-10:l+90,1]\n",
+    "print(l)\n",
+    "y=data[l-10:l+90,2]\n",
+    "x1=np.arange(min(x),max(x),(max(x)-min(x))/200)\n",
+    "from scipy import interpolate\n",
+    "y1=interpolate.interp1d(x,y,kind='cubic')(x1)\n",
+    "plt.ylim(-0.009, 0.12)\n",
+    "plt.plot(x1,y1,'k')\n",
+    "setlabel2(ax,'(h)')\n",
+    "plt.text(0.2*(max(x)-min(x)),0.8*(max(y)-min(y)),'(1+1)-REMPI')\n",
+    "plt.text(0.6*(max(x)-min(x)),0.3*(max(y)-min(y)),'(1+2)-REMPI')\n",
+    "plt.xlabel(\"Energy (eV)\")\n",
+    "plt.ylabel(\"Intensity (arb.units)\")\n",
+    "plt.subplots_adjust(left=0.125,\n",
+    "                    bottom=0.1, \n",
+    "                    right=0.9, \n",
+    "                    top=0.9, \n",
+    "                    wspace=0.3, \n",
+    "                    hspace=0.35)\n",
+    "plt.savefig(dir+'picture\\\\f7popenetgy.'+figureType,bbox_inches = 'tight',dpi=figureDPI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import matplotlib.gridspec as gridspec\n",
     "plt.figure(figsize=(16/2.54,6.5/2.54))\n",
     "\n",
@@ -347,6 +605,215 @@
     "ax.set_ylabel('Energy (a.u.)')\n",
     "plt.savefig(outDir+'EnergyRJV.'+figureType,bbox_inches ='tight',dpi=figureDPI)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(16/2.54,24/2.54))\n",
+    "titleLoc=\"left\"\n",
+    "intDir=\"D:\\\\doc\\\\data\\\\ion1test\\\\delayPumpAndProbe\\\\21\\\\\"\n",
+    "\n",
+    "ax=plt.subplot(4,2,1)\n",
+    "data =np.loadtxt(intDir+\"ExcRadWave.dat\")\n",
+    "np.savetxt(dir+\"data\\\\f8(1)ExcRadWave.dat\", data)\n",
+    "#plt.style.use('_mpl-gallery-nogrid')\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
+    "setlabel3(ax,'(a)')\n",
+    "#plt.xlim(TimeTurn,TimeEnd)\n",
+    "plt.ylim(1.75,10.0)\n",
+    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "plt.colorbar()\n",
+    "# data=np.loadtxt(dir+\"data\\\\f1(2)PotentialEnergy.dat\")\n",
+    "# x=data[:,0]\n",
+    "# y=data[:,3]\n",
+    "# plt.plot(y,-x)\n",
+    "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
+    "plt.ylabel(\"$R$ (a.u.)\")\n",
+    "ax=plt.subplot(4,2,2)\n",
+    "data =np.loadtxt(intDir+\"IonRadWave.dat\")\n",
+    "np.savetxt(dir+\"data\\\\f8(2)IonRadWave.dat\",data)\n",
+    "#plt.style.use('_mpl-gallery-nogrid')\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
+    "#plt.xlim(TimeTurn,TimeEnd)\n",
+    "plt.ylim(1.75,10.0)\n",
+    "setlabel3(ax,'(e)')\n",
+    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "plt.colorbar()\n",
+    "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
+    "plt.ylabel(\"$R$ (a.u.)\")\n",
+    "\n",
+    "intDir=\"D:\\\\doc\\\\data\\\\ion1test\\\\delayPumpAndProbe\\\\42\\\\\"\n",
+    "#plt.figure(figsize=(12,6))\n",
+    "ax=plt.subplot(4,2,3)\n",
+    "data =np.loadtxt(intDir+\"ExcRadWave.dat\")\n",
+    "np.savetxt(dir+\"data\\\\f8(3)ExcRadWave.dat\", data)\n",
+    "#plt.style.use('_mpl-gallery-nogrid')\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
+    "setlabel3(ax,'(b)')\n",
+    "#plt.xlim(TimeTurn,TimeEnd)\n",
+    "plt.ylim(1.75,10.0)\n",
+    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "plt.colorbar()\n",
+    "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
+    "plt.ylabel(\"$R$ (a.u.)\")\n",
+    "ax=plt.subplot(4,2,4)\n",
+    "data =np.loadtxt(intDir+\"IonRadWave.dat\")\n",
+    "np.savetxt(dir+\"data\\\\f8(4)IonRadWave.dat\",data)\n",
+    "#plt.style.use('_mpl-gallery-nogrid')\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
+    "#plt.xlim(TimeTurn,TimeEnd)\n",
+    "plt.ylim(1.75,10.0)\n",
+    "setlabel3(ax,'(f)')\n",
+    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "plt.colorbar()\n",
+    "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
+    "plt.ylabel(\"$R$ (a.u.)\")\n",
+    "\n",
+    "intDir=\"D:\\\\doc\\\\data\\\\ion1test\\\\delayPumpAndProbe\\\\63\\\\\"\n",
+    "#plt.figure(figsize=(12,6))\n",
+    "ax=plt.subplot(4,2,5)\n",
+    "data =np.loadtxt(intDir+\"ExcRadWave.dat\")\n",
+    "np.savetxt(dir+\"data\\\\f8(5)ExcRadWave.dat\", data)\n",
+    "#plt.style.use('_mpl-gallery-nogrid')\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
+    "setlabel3(ax,'(c)')\n",
+    "#plt.xlim(TimeTurn,TimeEnd)\n",
+    "plt.ylim(1.75,10.0)\n",
+    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "plt.colorbar()\n",
+    "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
+    "plt.ylabel(\"$R$ (a.u.)\")\n",
+    "ax=plt.subplot(4,2,6)\n",
+    "data =np.loadtxt(intDir+\"IonRadWave.dat\")\n",
+    "np.savetxt(dir+\"data\\\\f8(6)IonRadWave.dat\",data)\n",
+    "#plt.style.use('_mpl-gallery-nogrid')\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
+    "#plt.xlim(TimeTurn,TimeEnd)\n",
+    "plt.ylim(1.75,10.0)\n",
+    "setlabel3(ax,'(g)')\n",
+    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "plt.colorbar()\n",
+    "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
+    "plt.ylabel(\"$R$ (a.u.)\")\n",
+    "\n",
+    "\n",
+    "intDir=\"D:\\\\doc\\\\data\\\\ion1test\\\\delayPumpAndProbe\\\\84\\\\\"\n",
+    "#plt.figure(figsize=(12,6))\n",
+    "ax=plt.subplot(4,2,7)\n",
+    "data =np.loadtxt(intDir+\"ExcRadWave.dat\")\n",
+    "np.savetxt(dir+\"data\\\\f8(7)ExcRadWave.dat\", data)\n",
+    "#plt.style.use('_mpl-gallery-nogrid')\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
+    "setlabel3(ax,'(d)')\n",
+    "#plt.xlim(TimeTurn,TimeEnd)\n",
+    "plt.ylim(1.75,10.0)\n",
+    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "plt.colorbar()\n",
+    "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
+    "plt.ylabel(\"$R$ (a.u.)\")\n",
+    "ax=plt.subplot(4,2,8)\n",
+    "data =np.loadtxt(intDir+\"IonRadWave.dat\")\n",
+    "np.savetxt(dir+\"data\\\\f8(8)IonRadWave.dat\",data)\n",
+    "#plt.style.use('_mpl-gallery-nogrid')\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
+    "#plt.xlim(TimeTurn,TimeEnd)\n",
+    "plt.ylim(1.75,10.0)\n",
+    "setlabel3(ax,'(h)')\n",
+    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "plt.colorbar()\n",
+    "plt.xlabel(\"Time (\"+timeUnit+\")\")\n",
+    "plt.ylabel(\"$R$ (a.u.)\")\n",
+    "plt.subplots_adjust(left=0.1,\n",
+    "                    bottom=0.1, \n",
+    "                    right=0.9, \n",
+    "                    top=0.9, \n",
+    "                    wspace=0.25, \n",
+    "                    hspace=0.35)\n",
+    "plt.savefig(dir+\"picture\\\\f8ExcIonRad.\"+figureType,bbox_inches=\"tight\",transparent=True,dpi=figureDPI)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(tight_layout=True,figsize=(cm2inch(8*2),cm2inch(6.5*3)))\n",
+    "intDir=\"D:\\\\doc\\\\data\\\\onepump\\\\onepump200\\\\\"\n",
+    "ax=plt.subplot(3,1,1)\n",
+    "data=np.loadtxt(intDir+\"excradwave.dat\")\n",
+    "np.savetxt(dir+\"data\\\\f9(1).dat\",data,fmt=\"%.9f\")\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z=data[:,2]\n",
+    "plt.xlabel(\"Time (fs)\")\n",
+    "plt.ylabel(\"$R$ (a.u.)\")\n",
+    "plt.tricontourf(x,y,z,levels,cmap='jet')\n",
+    "plt.colorbar(pad=0.01,location='top')\n",
+    "setlabelm(ax,'(a)',[-0.1,1.001])\n",
+    "# plt.xlim(0,150)\n",
+    "plt.ylim(min(y),10)\n",
+    "ax=plt.subplot(3,1,2)\n",
+    "data=np.loadtxt(intDir+'ktot.dat')\n",
+    "np.savetxt(dir+\"data\\\\f9(2).dat\",data,fmt=\"%.9f\")\n",
+    "x=data[:,0]\n",
+    "y=data[:,1]\n",
+    "z1=data[:,2]\n",
+    "z2=data[:,3]\n",
+    "z3=data[:,4]\n",
+    "z4=z1+z2+z3\n",
+    "\n",
+    "plt.tricontourf(x,y,z2,levels,cmap='jet')\n",
+    "plt.colorbar(pad=0.015,location='top')\n",
+    "setlabelm(ax,'(b)',[-0.1,1.001])\n",
+    "plt.xlabel('Time (fs)')\n",
+    "plt.ylabel('Momentum (arb.units)')\n",
+    "ax=plt.subplot(3,1,3)\n",
+    "\n",
+    "data=np.loadtxt('D:\\\\doc\\\\data\\\\onePump\\\\onepump200\\\\eneTRJVexc.dat')\n",
+    "np.savetxt(dir+\"data\\\\f9(3).dat\",data,fmt=\"%.9f\")\n",
+    "t = data[:,0]\n",
+    "population_by_continent = {\n",
+    "    'Translation': data[:,1],\n",
+    "    'Rotation':    data[:,2],\n",
+    "    'Vibration':   data[:,3],\n",
+    "}\n",
+    "ax.stackplot(t, population_by_continent.values(),\n",
+    "             labels=population_by_continent.keys(), alpha=1)\n",
+    "ax.legend(loc='best', bbox_to_anchor=(0.51, 0.9, 0.1, 0.1))\n",
+    "#ax.set_title('World population')\n",
+    "ax.set_xlabel('Time (fs)')\n",
+    "ax.set_ylabel('Energy (a.u.)')\n",
+    "# plt.colorbar(pad=0.01,visible=False)\n",
+    "plt.xlim(min(t),max(t))\n",
+    "setlabelm(ax,'(c)',[-0.1,1.001])\n",
+    "plt.subplots_adjust(left=0.125,\n",
+    "                    bottom=0.1, \n",
+    "                    right=0.9, \n",
+    "                    top=0.9, \n",
+    "                    wspace=0.3, \n",
+    "                    hspace=0.35)\n",
+    "plt.savefig(dir+'picture\\\\f9pumpExcRadWave.'+figureType,bbox_inches = 'tight',dpi=figureDPI)"
    ]
   },
   {
@@ -512,7 +979,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.0 64-bit",
+   "display_name": "Python 3.10.6 64-bit (microsoft store)",
    "language": "python",
    "name": "python3"
   },
@@ -526,12 +993,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "5addf786bcd861d1ce5006f23111f8cbb206731e5b61b0a5632ba9e0252558a8"
+    "hash": "8687b81b5d14307c58608bd19c9f92d9c321847991efa868faf2d3a3bcd23c46"
    }
   }
  },
